--- a/bravo/pv.yaml
+++ b/bravo/pv.yaml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: drupal-pv
+  labels:
+    name: drupal-pv
 spec:
   storageClassName: manual
   capacity:
@@ -16,6 +18,8 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: drupal-mysql-pv
+  labels:
+    name: drupal-mysql-pv
 spec:
   storageClassName: manual
   capacity:
