--- a/bravo/drupal.yaml
+++ b/bravo/drupal.yaml
@@ -3,7 +3,13 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: drupal
+  labels:
+    app: drupal
 spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: drupal
   replicas: 1
   template:
     metadata:
@@ -16,7 +22,7 @@ spec:
         command:
         - /bin/bash
         - -c
-        args: ['cp -r /var/www/html/sites/ /data/; chwon www-data:www-data /data/ -R']
+        args: ['cp -r /var/www/html/sites/ /data/; chown www-data:www-data /data/ -R']
         volumeMounts:
         - mountPath: /data
           name: vol-drupal
@@ -27,21 +33,18 @@ spec:
         ports:
         - containerPort: 80
         volumeMounts:
-          mountPath: /var/www/html/modules
-          name: vol-drupal
-          subPath: modules
-        volumeMounts:
-          mountPath: /var/www/html/profiles
-          name: vol-drupal
-          subPath: profiles        
-        volumeMounts:
-          mountPath: /var/www/html/sites
-          name: vol-drupal
-          subPath: sites  
-        volumeMounts:      
-          mountPath: /var/www/html/themes
-          name: vol-drupal
-          subPath: themes  
+          - mountPath: /var/www/html/modules
+            name: vol-drupal
+            subPath: modules
+          - mountPath: /var/www/html/profiles
+            name: vol-drupal
+            subPath: profiles        
+          - mountPath: /var/www/html/sites
+            name: vol-drupal
+            subPath: sites  
+          - mountPath: /var/www/html/themes
+            name: vol-drupal
+            subPath: themes  
       volumes:
         - name: vol-drupal
           persistentVolumeClaim:
@@ -54,8 +57,9 @@ metadata:
 spec:
   selector:
     app: drupal
+  type: NodePort
   ports:
     - name: drupal
-      protocol: HTTP
+      protocol: TCP
       port: 80
       nodePort: 30095
