--- a/redis-islands/statefulset.yaml
+++ b/redis-islands/statefulset.yaml
@@ -4,7 +4,7 @@ kind: StatefulSet
 metadata:
   name: redis-cluster
 spec:
-  serviceName: "redis-cluster"
+  serviceName: redis-cluster
   replicas: 6
   selector:
     matchLabels:
